--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="/main.css" /> -->
+    <!-- <link rel="stylesheet" href="./components/myStyles.css" /> -->
   </head>
   <body>
     <div id="app"></div>
