--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
       <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
   
       <link rel="stylesheet" href="/main.css" />
-    </head>
+    <script defer src="/bundled.js"></script></head>
     <body>
       <div id="app"><header class="navbar navbar-expand-lg navbar-dark bg-dark"><a class="navbar-brand" href="/">BadBank!</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarNav"></div></header><div class="py-5 my-5 text-center"><div>Loading ...</div></div><footer class="border-top text-center small text-muted py-3"><p><a class="mx-1" href="/">Home</a> <!-- -->|<!-- --> <!-- --><a class="mx-1" href="/about-us">About Us</a> <!-- -->|<!-- --> <!-- --><a class="mx-1" href="/terms">Terms</a></p><p class="m-0">Copyright © <!-- -->2022<!-- --> <!-- --><a href="/" class="text-muted">BadBank</a>. All rights reserved.<!-- --></p></footer></div>
     </body>
